wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
      #   cert-manager.io/cluster-issuer: "wp-prod-issuer"
spec:
  rules:
  - host: wordpress.local.quebrada.digital
    http:
     paths:
     - path: "/"
       pathType: Prefix
       backend:
         service:
           name: wordpress-service
           port:
             number: 80
#  tls:
#  - hosts:
#    - wordpress.example.net
#    secretName: wordpress-tls
